ui: fixed dark mode of deploy url

--- a/ui/app/styles/_variables.scss
+++ b/ui/app/styles/_variables.scss
@@ -52,6 +52,7 @@ $button-shadow: 0 3px 2px rgba(var(--shadow), 0.2);
     --brand: #{dehex($brand-color)};
     --background: #{dehex(color.$black)};
     --text: #{dehex(color.$ui-gray-100)};
+    --text-deploy-url: #{dehex(color.$ui-gray-050)};
     --text-muted: #{dehex(color.$ui-gray-400)};
     --text-subtle: #{dehex(color.$ui-gray-600)};
     --link: #{dehex(color.$blue-400)};
